<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Food@U</string>
    <string name="profile">Profile</string>
    <string name="ok">OK</string>
    <string name="profileTask">Edit\nJoel\'s Profile</string>
    <string name="notTask">Free\nFood</string>
    <string name="reviewTask">Write\nReview</string>
    <string name="recTask">Where do\nI eat?</string>
    <string name="search_hint">food</string>
    <string name="recommendation">Recommendation</string>
    <string name="action_settings">Log Out</string>
    <string name="action_register">Register Device</string>
    <string name="logo">Logo</string>
    <string name="title_activity_create_account">Edit Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_recommendation">Where do I eat? </string>
    <string name="e_mail">Email</string>
    <string name="pass_word">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">Login</string>
    <string name="new_user">New User? Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="food_veg">Vegetarian</string>
    <string name="toggle_button">Toggle</string>
    <string name="avg_budget">Budget per meal $:</string>
    <string name="create_account">Edit Profile</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="price_range">Price</string>
    <string name="dollar">$</string>
    <string name="title_activity_refine_search">RefineSearch</string>
    <string name="vegan">Vegan</string>
    <string name="toggle_button2">Toggle2</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="toggle_button3">Toggle3</string>
    <string name="title_activity_search_detail">SearchDetail</string>
    <string name="about">Food@U is a restaurant finder and decision support application for the U of M community. It helps users make immediate decisions about where to eat. It also provides an efficient and quick way of reviewing restaurants. Food@U also provides notifications about free food events at the U.</string>
    <string name="title_activity_notification">Free Food</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_copy">Copy</string>
    <string name="title_activity_review">Write Review</string>
    <string name="title_activity_user_review">Add Review</string>
    <string name="dollar_sm">$</string>
    <string name="dollar_md">$$</string>
    <string name="dollar_lg">$$$</string>
    <string name="campus_umn">Campus</string>
    <string name="east_bank">East Bank</string>
    <string name="west_bank">West Bank</string>
    <string name="saint_paul">Saint Paul</string>
    <string name="food_constraints">Food Constraints</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="kosher">Kosher</string>
    <string name="amenities">Amenities</string>
    <string name="free_wifi">Free-Wifi</string>
    <string name="parking">Free-Parking</string>
    <string name="refine_search">Refine</string>
    <string name="cancel_search">Cancel</string>
    <string name="title_activity_user_recommendation">Profile Recommendation</string>
    <string name="title_activity_cuisine_recommendation">Cuisine Recommendation</string>
    <string name="title_activity_food_search">FoodSearch</string>
    <string name="fav_cuisine">Favourite Cuisines</string>
    <string name="cuisine_one">Cuisine 1</string>
    <string name="info">Info</string>
    <string name="call">Call</string>
    
    <string name="menu_settings">Settings</string>
	<string name="gps.lable.gps">Warning</string>
	<string name="gps.lable.warning_message">You need to start GPS to display Route on Map. Would you like to Enable it?</string>
	<string name="no">No</string>
    <string name="yes">Yes</string>

    <string-array name="Cuisines_choices">
        <item>American</item>
        <item>Cafe</item>
        <item>Chinese</item>
        <item>Italian</item>
        <item>Juices</item>
        <item>Mexican</item>
        <item>Vietnamese</item>
    </string-array>
    <string-array name="Cuisines_array">
        <item>Select</item>
        <item>Indian</item>
        <item>American</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>Chinese</item>
        <item>Thai</item>
        <item>Vietnamese</item>
        <item>MiddleEast</item>
    </string-array>

    <string name="select_cuisine">Select a Cuisine</string>
    <string name="cuisine_two">Cuisine 2</string>
    <string name="cuisine_three">Cuisine 3</string>
    <string name="title_activity_maps">Maps</string>

</resources>
