<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView1"
            style="@style/profileLbl"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/fname"
            style="@style/profiletxt"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            style="@style/profileLbl"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/lname"
            style="@style/profiletxt"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            style="@style/profileLbl"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/email"
            style="@style/profiletxt"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView4"
            style="@style/profileLbl"
            android:text="@string/pass_word" />

        <EditText
            android:id="@+id/pwd"
            style="@style/profiletxt"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView7"
            style="@style/profileLbl"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/cpwd"
            style="@style/profiletxt"
            android:inputType="textPassword" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                style="@style/profileLbl"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignParentTop="true"
                android:text="@string/food_veg" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="25dip"
                android:text="@string/vegan" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="25dip"
                android:text="@string/gluten_free" />

            <ToggleButton
                android:id="@+id/vegeterian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/vegan"
                android:layout_alignParentTop="true"
                android:text="@string/toggle_button"
                android:textOff="No"
                android:textOn="Yes" />

            <ToggleButton
                android:id="@+id/vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView8"
                android:layout_marginRight="18dp"
                android:text="@string/toggle_button2"
                android:textOff="No"
                android:textOn="Yes" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="25dip"
                android:text="@string/avg_budget" />

            <ToggleButton
                android:id="@+id/gluten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/vegan"
                android:layout_alignTop="@+id/textView9"
                android:text="@string/toggle_button3"
                android:textOff="No"
                android:textOn="Yes" />

            <EditText
                android:id="@+id/budget"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_alignRight="@+id/gluten"
                android:layout_alignTop="@id/textView6"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:inputType="number" />
            <TextView
            android:id="@+id/favCuisinetextView"
            style="@style/profileLbl"
            android:layout_below="@+id/textView6"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="25dip"
            android:text="@string/fav_cuisine" />
            
            <TextView
            android:id="@+id/cuisine1textView"
            style="@style/profileLbl"
            android:layout_below="@+id/favCuisinetextView"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="15dip"
            android:text="@string/cuisine_one" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cuisine1textView"
                android:layout_toRightOf="@+id/textView6"
                android:prompt="@string/select_cuisine" />
            
 			<TextView
	            android:id="@+id/cuisine2textView"
	            style="@style/profileLbl"
	            android:layout_below="@+id/cuisine1textView"
	            android:layout_marginBottom="5dip"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="15dip"
	            android:text="@string/cuisine_two" />

      		<Spinner
      		    android:id="@+id/spinner2"
      		    android:layout_width="wrap_content"
      		    android:layout_height="wrap_content"
      		    android:layout_alignTop="@+id/cuisine2textView"
      		    android:layout_below="@+id/spinner1"
      		    android:layout_toRightOf="@+id/textView6"
      		    android:prompt="@string/select_cuisine" />
        <TextView
	            android:id="@+id/cuisine3textView"
	            style="@style/profileLbl"
	            android:layout_below="@+id/cuisine2textView"
	            android:layout_marginBottom="5dip"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="15dip"
	            android:text="@string/cuisine_three" />

      		<Spinner
      		    android:id="@+id/spinner3"
      		    android:layout_width="wrap_content"
      		    android:layout_height="wrap_content"
      		    android:layout_alignTop="@+id/cuisine3textView"
      		    android:layout_below="@+id/spinner3"
      		    android:layout_toRightOf="@+id/textView6"
      		    android:prompt="@string/select_cuisine" />
        </RelativeLayout>

        <Button
            android:id="@+id/create"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_account" />
    </LinearLayout>

</ScrollView>