<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CCFFFFFF"   >
<RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#CCFFFFFF" 
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.search.MainActivity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/price_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginBottom="15dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="10dp"
            android:text="@string/dollar_sm" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/button1"
            android:text="@string/dollar_md" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_toRightOf="@+id/button2"
            android:text="@string/dollar_lg" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/button1"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view1"
            android:layout_below="@+id/view1"
            android:layout_marginTop="10dp"
            android:text="@string/campus_umn"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button1"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp"
            android:text="@string/east_bank" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBox1"
            android:layout_below="@+id/checkBox1"
            android:text="@string/west_bank" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBox2"
            android:layout_below="@+id/checkBox2"
            android:text="@string/saint_paul" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/checkBox3"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/view2"
            android:layout_below="@+id/view2"
            android:layout_marginTop="15dp"
            android:text="@string/food_constraints"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/checkBox2"
            android:layout_below="@+id/textView3"
            android:text="@string/vegetarian" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView2"
            android:layout_below="@+id/checkBox4"
            android:text="@string/vegan" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBox3"
            android:layout_below="@+id/checkBox5"
            android:text="@string/kosher" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/checkBox6"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view3"
            android:layout_below="@+id/view3"
            android:layout_marginTop="18dp"
            android:text="@string/amenities"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="10dp"
            android:text="@string/free_wifi" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBox7"
            android:layout_below="@+id/checkBox7"
             android:layout_marginBottom="10dp"
            android:text="@string/parking" />

        <Button
            android:id="@+id/refine"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/checkBox5"
            android:layout_below="@+id/checkBox8"
            style="@style/button_text_gold_sm"
            android:text="@string/refine_search" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/checkBox8"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/refine"
            style="@style/button_text_gold_sm"
            android:text="@string/cancel_search" />

    </RelativeLayout>
</ScrollView>
