<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    
    android:background="#ffffff">
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/login">
    <TextView
        android:id="@+id/emaillbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginBottom="20dip"
        android:background= "@drawable/edittext_bg"
        android:ems="10"
        android:padding="5dip"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/pass_word"
        android:textColor="@color/maroon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passwordtxt"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:ems="10"
        android:padding="5dip"
        android:layout_marginBottom="5dip"
         android:background= "@drawable/edittext_bg"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/link_to_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="50dip"
        android:textColor="#000"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dip"
        android:gravity="center"
        style="@style/button_text"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_button" />
</LinearLayout>

    <Button
        android:id="@+id/createBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/new_user"
    android:layout_gravity="center_horizontal"
    style="?android:attr/borderlessButtonStyle"
     />

</LinearLayout>
</RelativeLayout>