<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.foodu.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2" >

                <LinearLayout
                    style="@style/homebtncontainer"
                    android:background="@drawable/notification" >

                    <Button
                        android:id="@+id/notification"
                        style="@style/homebtn"
                        android:text="@string/notTask" />
                </LinearLayout>

                <LinearLayout
                    style="@style/homebtncontainer"
                    android:background="@drawable/recommendation" >

                    <Button
                        android:id="@+id/recommendation"
                        style="@style/homebtn"
                        android:text="@string/recTask" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2" >

                <LinearLayout
                    style="@style/homebtncontainer"
                    android:background="@drawable/profile" >

                    <Button
                        android:id="@+id/profile"
                        style="@style/homebtn"
                        android:text="@string/profileTask" />
                </LinearLayout>

                <LinearLayout
                    style="@style/homebtncontainer"
                    android:background="@drawable/review" >

                    <Button
                        android:id="@+id/review"
                        style="@style/homebtn"
                        android:text="@string/reviewTask" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:padding="10dip" >

        <LinearLayout
            android:id="@+id/linearLayout_dummy1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/logobtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_dummy2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>